include $(top_srcdir)/build/Common.Makefile

SUBDIRS = \
   Boo \
   BooBuddy \
   MusicBrainz \
   Gnome.Keyring \
   Last.FM \
   Banshee.Widgets \
   Banshee.Base \
   Banshee.MediaEngine \
   Banshee.Dap \
   Banshee.Plugins \
   Banshee.Hyena \
   Banshee

MAINTAINERCLEANFILES = \
	Makefile.in
