include $(top_srcdir)/Makefile.include

BANSHEE_IMPORT = banshee-import
BANSHEE_IMPORT_ASSEMBLY = $(BANSHEE_IMPORT).exe
DBUS_CLIENT_ASSEMBLY = dbus-client.exe

#toolsdir = $(pkglibdir)
#tools_SCRIPTS = $(BANSHEE_IMPORT_ASSEMBLY)
#bin_SCRIPTS = $(BANSHEE_IMPORT)

BANSHEE_IMPORT_SOURCES = $(srcdir)/BansheeImport.cs
DBUS_CLIENT_SOURCES = $(srcdir)/BansheeDBusClient.cs

all: $(BANSHEE_IMPORT_ASSEMBLY) $(DBUS_CLIENT_ASSEMBLY)

$(BANSHEE_IMPORT_ASSEMBLY): $(BANSHEE_IMPORT_SOURCES)
	$(BUILD_BANSHEE_CORE) -out:$@ $(LINK_MONO_UNIX) $(BANSHEE_IMPORT_SOURCES)

$(DBUS_CLIENT_ASSEMBLY): $(DBUS_CLIENT_SOURCES)
	$(BUILD) -out:$@ $(LINK_DBUS) $(LINK_GTK) $(DBUS_CLIENT_SOURCES)

run:
	$(RUN_PATH) $(MONO) $(DBUS_CLIENT_ASSEMBLY)

EXTRA_DIST = \
	$(BANSHEE_IMPORT).in \
	$(BANSHEE_IMPORT_SOURCES) \
	$(DBUS_CLIENT_SOURCES)

CLEANFILES = *.exe *.mdb
DISTCLEANFILES = *.pidb
MAINTAINERCLEANFILES = Makefile.in

