SUBDIRS = \
	Banshee.Plugins.Audioscrobbler \
	Banshee.Plugins.Bookmarks \
	Banshee.Plugins.Daap \
	Banshee.Plugins.MetadataSearch \
	Banshee.Plugins.MiniMode \
	Banshee.Plugins.MMKeys \
	Banshee.Plugins.NotificationAreaIcon \
	Banshee.Plugins.Podcast \
	Banshee.Plugins.Radio \
	Banshee.Plugins.Recommendation \
	Banshee.Plugins.Sample

MAINTAINERCLEANFILES = \
	Makefile.in

uninstall-hook:
	rm -rf $(pkglibdir)/Banshee.Plugins

